# sam-subsampler

./: .gitignore  Cargo.toml  LICENSE  README.md  pixi.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 20260723-180038_global-subsample.plan.qmd  20260723-194418_global-subsample.report.qmd
src/: bam_io.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  selection.rs
tests/: integration.rs
