[package]
name = "sam-subsampler"
version = "0.1.0"
edition = "2024"
authors = ["Yun Jiang <jiangyunacw@gmail.com>"]
license = "MIT"
description = "Two-pass BAM/CRAM subsampler that tags selected reads in place"
repository = "https://github.com/jiangyun-fun/sam-subsampler"
readme = "README.md"

[[bin]]
name = "sam-subsampler"
path = "src/main.rs"

[dependencies]
# default-features=false drops `curl` (and openssl-sys). We only handle local
# files, and the conda openssl static lib references C23 libc symbols that the
# link-time sysroot doesn't provide. bzip2/lzma/libdeflate cover CRAM codecs.
rust-htslib = { version = "1.0", default-features = false, features = ["bzip2", "lzma", "libdeflate"] }
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
rand = "0.10"
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"

[dev-dependencies]
rstest = "0.26"
tempfile = "3.27"
proptest = "1"

[lints.clippy]
unwrap_used = "warn"
